<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="cancel">Cancel</string>
	<string name="cannot_open_document">Cannot open document</string>
	<string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
	<string name="dismiss">Dismiss</string>
	<string name="enter_password">Enter password</string>
	<string name="no_further_occurrences_found">No further occurrences found</string>
	<string name="not_supported">Not supported</string>
	<string name="okay">Okay</string>
	<string name="search">Search&#x2026;</string>
	<string name="searching_">Searching&#x2026;</string>
	<string name="text_not_found">Text not found</string>
	<string name="sharing_book">Sharing book</string>
	<string name="share_text">Share</string>
	<string name="sharing_text">Sharing text</string>
	<string name="web_search">Web search</string>
	<string name="relayout_">Relayout&#x2026;</string>

    <string name="landscape">Landscape</string>
    <string name="single_column">Single Column</string>
    <string name="text_left">RtL Text</string>
    <string name="flip_vertical">Flip Vertical</string>
    <string name="lock">Lock Stray</string>
    <string name="fit_screen">Fit Screen</string>
    <string name="crop_margin">Crop Margin</string>
    <string name="focus">Focus</string>
    <string name="smart_focus">Smart Focus</string>
    <string name="link">Activate Links</string>
    <string name="text_search">Search</string>
    <string name="format_size">Font Size</string>
    <string name="toc">Table of Contents</string>
    <string name="color">Color Palette</string>
    <string name="share">Share Book</string>
    <string name="options">Options</string>
    <string name="fullscreen">Full Screen</string>
    <string name="toolbar_bottom">Toolbar on Bottom</string>
    <string name="img_follow_pal">Image follow Palette</string>
    <string name="group_document">DOCUMENT</string>
    <string name="group_global">GLOBAL</string>

    <string name="contents">Contents</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_created">Bookmark created</string>
    <string name="bookmark_already_exists">Bookmark already exists</string>
    <string name="edit_bookmark">"Edit Bookmark"</string>
    <string name="edit_bookmark_message">Please enter bookmark title</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="help">Help</string>
    <string name="readme">https://raw.githubusercontent.com/elementdavv/chaka/refs/heads/master/README.md</string>
    <string name="api">https://api.github.com/repos/elementdavv/chaka/releases/latest</string>

</resources>
