<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:keepScreenOn="true"
	>

	<ViewAnimator
		android:id="@+id/switcher"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		>

		<LinearLayout
			android:id="@+id/mainBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@color/toolbar"
			>

            <HorizontalScrollView
			    android:id="@+id/scrollView"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:scrollbars="none"
                >

		    <LinearLayout
			    android:id="@+id/iconView"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    >

			<TextView
				android:id="@+id/docNameText"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:paddingLeft="4dp"
				android:paddingRight="8dp"
				android:singleLine="true"
				android:ellipsize="end"
				android:textSize="16sp"
				android:textColor="@android:color/white"
				/>

			<ImageButton
				android:id="@+id/outlineButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_outlined_white_24dp"
				android:tooltipText="@string/contents"
				/>

			<ImageButton
				android:id="@+id/singleColumnButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_single_column_white_24dp"
				android:tooltipText="@string/single_column"
				/>

			<ImageButton
				android:id="@+id/textLeftButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_text_left_white_24dp"
                android:tooltipText="@string/text_left"
				/>

			<ImageButton
				android:id="@+id/flipVerticalButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_flip_vertical_white_24dp"
                android:tooltipText="@string/flip_vertical"
				/>

			<ImageButton
				android:id="@+id/fitScreenButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_fit_screen_white_24dp"
				android:visibility="gone"
				android:tooltipText="@string/fit_screen"
				/>

			<ImageButton
				android:id="@+id/lockButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_lock_white_24dp"
                android:tooltipText="@string/lock"
				/>

			<ImageButton
				android:id="@+id/cropMarginButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_crop_margin_white_24dp"
                android:tooltipText="@string/crop_margin"
				/>

			<ImageButton
				android:id="@+id/focusButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_focus_white_24dp"
                android:tooltipText="@string/focus"
				/>

			<ImageButton
				android:id="@+id/smartFocusButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_smart_focus_white_24dp"
                android:tooltipText="@string/smart_focus"
				/>

			<ImageButton
				android:id="@+id/colorButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_color_white_24dp"
				android:tooltipText="@string/color"
				/>

			<ImageButton
				android:id="@+id/layoutButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_format_size_white_24dp"
				android:visibility="gone"
                android:tooltipText="@string/format_size"
				/>

			<ImageButton
				android:id="@+id/optionsButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_options_white_24dp"
				android:tooltipText="@string/options"
				/>

			<ImageButton
				android:id="@+id/linkButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_link_white_24dp"
                android:tooltipText="@string/link"
				/>

			<ImageButton
				android:id="@+id/searchButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_search_white_24dp"
                android:tooltipText="@string/text_search"
				/>

			<ImageButton
				android:id="@+id/landscapeButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_landscape_white_24dp"
				android:tooltipText="@string/landscape"
				/>

			<ImageButton
				android:id="@+id/shareButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_share_white_24dp"
				android:tooltipText="@string/share"
				/>

			<ImageButton
				android:id="@+id/helpButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_help_white_24dp"
				android:tooltipText="@string/help"
				/>

		    </LinearLayout>

            </HorizontalScrollView>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/searchBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:background="@color/toolbar"
			>

			<ImageButton
				android:id="@+id/searchClose"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_close_white_24dp"
				/>

			<EditText
				android:id="@+id/searchText"
				android:background="@android:color/transparent"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:inputType="text"
				android:imeOptions="actionSearch"
				android:singleLine="true"
				android:hint="@string/search"
				android:textSize="16sp"
				android:textColor="@android:color/white"
				android:textColorHighlight="#a0a0a0"
				android:textColorHint="#a0a0a0"
				/>

			<ImageButton
				android:id="@+id/searchClear"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_clear_white_24dp"
				/>

			<ImageButton
				android:id="@+id/searchBack"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_chevron_left_white_24dp"
				/>

			<ImageButton
				android:id="@+id/searchForward"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/button"
				android:src="@drawable/ic_chevron_right_white_24dp"
				/>

		</LinearLayout>

	</ViewAnimator>

	<RelativeLayout
		android:id="@+id/lowerButtons"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		>

		<SeekBar
			android:id="@+id/pageSlider"
			android:layout_width="match_parent"
			android:layout_height="36dp"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="0dp"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:paddingTop="12dp"
			android:paddingBottom="12dp"
			android:background="@color/toolbar"
			android:thumb="@drawable/seek_thumb"
			android:progressDrawable="@drawable/seek_line"
			/>

		<TextView
			android:id="@+id/pageNumber"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/pageSlider"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="16dp"
			android:background="@drawable/page_indicator"
			android:textSize="16sp"
			android:textColor="@android:color/white"
			/>

	</RelativeLayout>

</RelativeLayout>
